--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,13 +47,13 @@
         android:label="@string/choose_pickup_date"
         tools:layout="@layout/fragment_pickup" >
         <action
-            android:id="@+id/action_pickupFragment_to_summaryFragment"
-            app:destination="@id/summaryFragment" />
-        <action
             android:id="@+id/action_pickupFragment_to_startFragment"
             app:destination="@id/startFragment"
             app:popUpTo="@id/startFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_pickupFragment_to_userNameFragment"
+            app:destination="@id/userNameFragment" />
     </fragment>
     <fragment
         android:id="@+id/summaryFragment"
@@ -62,6 +62,20 @@
         tools:layout="@layout/fragment_summary" >
         <action
             android:id="@+id/action_summaryFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userNameFragment"
+        android:name="com.example.cupcake.UserNameFragment"
+        android:label="@string/enter_your_name"
+        tools:layout="@layout/fragment_user_name">
+        <action
+            android:id="@+id/action_userNameFragment_to_summaryFragment"
+            app:destination="@id/summaryFragment" />
+        <action
+            android:id="@+id/action_userNameFragment_to_startFragment"
             app:destination="@id/startFragment"
             app:popUpTo="@id/startFragment"
             app:popUpToInclusive="true" />
