--- a/app/src/main/res/layout/fragment_user_name.xml
+++ b/app/src/main/res/layout/fragment_user_name.xml
@@ -1,17 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".UserNameFragment">-->
-
-<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:text="@string/hello_blank_fragment" />-->
-
-<!--</FrameLayout>-->
-
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -54,9 +41,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textPersonName|textNoSuggestions"
-                    android:text="@{viewModel.name}"
+                    android:maxLines="1"
                     android:onTextChanged="@{() -> userNameFragment.setUserName()}"
-                    android:maxLines="1" />
+                    android:text="@{viewModel.name}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <View
